Bug 1982211 - Sidebar AI chatbot uses legible color on light and dark themes r=emilio,reusable-components-reviewers,omc-reviewers,desktop-theme-reviewers,firefox-ai-ml-reviewers,yjamora,hjones,mviar
Changed
* use new border design tokens in `chat.css`

Removed
* `--in-content` properties from `chat.css`

Fixed
* Sidebar settings not changing color based on theme

Differential Revision: https://phabricator.services.mozilla.com/D260689

--- a/browser/components/genai/chat.css
+++ b/browser/components/genai/chat.css
@@ -24,7 +24,7 @@ browser {
 #header {
   align-items: center;
   background-color: var(--sidebar-background-color);
-  border-bottom: 1px solid var(--in-content-border-color);
+  border-bottom: 1px solid var(--border-color);
   display: flex;
   flex-direction: row;
   padding-inline: var(--space-large);
@@ -287,7 +287,7 @@ browser {
 }
 
 #summarize-btn-container {
-  border-top: 1px solid var(--in-content-border-color);
+  border-top: 1px solid var(--border-color);
   padding: var(--space-large);
   position: relative;
 
